Css fix: Make shop buttons look less gimpy in IE.  Again, when dealing with tables, min-width won't affect cell size in IE.  Seeing as the side images don't stretch nicely, I'm assuming we meant to use width here anyway.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -964,7 +964,7 @@ img, embed, applet, object {
 }
 
 .orangeThick .W, .orangeThick .E, .blueThick .W, .blueThick .E {
-  min-width: 36px;
+  width: 36px;
   height: 44px;
 }
 
