--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -179,7 +179,7 @@
 }
 
 .listingDetailPanel .buyButton .X {
-  width: 100%;
+  width: 170px;
 }
 
 .listingDetailPanel .buyButton {
